--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "sober",
-    "displayName": "sober",
+    "name": "sober_theme",
+    "displayName": "sober_theme",
     "description": "",
     "version": "0.0.1",
     "engines": {
