--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sober",
+    "name": "soberTheme",
     "displayName": "sober_theme",
     "description": "",
     "version": "0.0.1",
