Sera este el final

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "soberTheme",
-    "displayName": "sober_theme",
+    "displayName": "SoberTheme",
     "description": "",
     "version": "0.0.1",
     "engines": {
